release 0.8 (2008-06-20 or 2008-07-25)
- Set<T> and SortedSet<T> can be used in addition to List<T> for the type of
  @*Param annotation parameters.
- Packages "com.sun.ws.rest.api.*" renamed to "com.sun.jersey.api.*"
- Packages "com.sun.ws.rest.spi.*" renamed to "com.sun.jersey.spi.*"
- The property/feature name space "com.sun.ws.rest.config" renamed to 
  "com.sun.jersey.config".
- The type javax.xml.bind.JAXBElement<T> can be used for XML and JSON
  serialization.
- Partially Integrated JSR 311 API 0.8
  - MediaType.parse renamed to MediaType.valueOf
  - NewCookie.parse renamed to NewCookie.valueOf
  - Cookie.parse renamed to Cookie.valueOf
  - CacheControl.parse renamed to CacheControl.valueOf
  - EntityTag.parse renamed to EntityTag.valueOf
  - UriInfo.getTemplateParameters renamed to UriInfo.getPathParameters
  - ApplicationConfig.getExtensibleMapping renamed to 
    ApplicationConfig.getMediaTypeMappings
  - Method parameter order of MessageBodyReader.readFrom has changed to be
    consistent with the method parameter order of MessageBodyWriter.writerTo.

release 0.7 (2008-04-18)
- The type javax.xml.bind.JAXBElement<T> can be used for reading and writing
  JAXB types that a not XML root elements from and to XML. TODO:JSON
  serialization.
- Renamed FormURLEncodedProperties to Form and changed the class to implement 
  javax.ws.rs.core.MultivaluedMap.
- Containers can be informed when they are required to reload, for example
  if new root resource classes have been added to removed, or class file
  definitions have changed while a VM is running.
  A com.sun.ws.rest.spi.container.ContainerNotifier instance may be 
  registered by adding a property to the ResourceConfig with the property name
  "com.sun.ws.rest.spi.container.ContainerNotifier" and a property value
  that is the instance of the ContainerNotifier.
  The ContainerNotifier instance may then notifier registered listeners
  when reloading is required.