@@ -20,13 +20,12 @@
  *     "Portions Copyrighted [year] [name of copyright owner]"
  */
 
-package com.sun.jersey.impl.json;
+package com.sun.jersey.api.json;
 
-import java.util.Collection;
+import com.sun.jersey.impl.json.JSONMarshaller;
+import com.sun.jersey.impl.json.JSONUnmarshaller;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.Map;
 import java.util.Map.Entry;
 import javax.xml.bind.JAXBContext;
@@ -34,9 +33,6 @@ import javax.xml.bind.JAXBException;
 import javax.xml.bind.Marshaller;
 import javax.xml.bind.Unmarshaller;
 import javax.xml.bind.Validator;
-import org.codehaus.jettison.json.JSONArray;
-import org.codehaus.jettison.json.JSONException;
-import org.codehaus.jettison.json.JSONObject;
 
 /**
  *
@@ -108,44 +104,5 @@ public final class JSONJAXBContext extends JAXBContext {
     
     private Map<String, Object> getJsonProperties() {
         return jsonProperties;
-    }
-    
-    @SuppressWarnings("unchecked")
-    static <T> Map<String, T> asMap(String jsonObjectVal) throws JSONException {
-        if (null == jsonObjectVal) {
-            return null;
-        }
-        Map<String, T> result = new HashMap<String, T>();
-
-        JSONObject sourceMap = new JSONObject(jsonObjectVal);
-        Iterator<String> keyIterator = sourceMap.keys();
-        while (keyIterator.hasNext()) {
-            String key = keyIterator.next();
-            result.put(key, (T)sourceMap.get(key));
-        }
-        return result;
-    }
-    
-    
-    @SuppressWarnings("unchecked")
-    static <T> Collection<T> asCollection(String jsonArrayVal) throws JSONException {
-        if (null == jsonArrayVal) {
-            return null;
-        }
-        Collection<T> result = new LinkedList<T>();
-
-        JSONArray arrayVal = new JSONArray(jsonArrayVal);
-        for (int i = 0; i < arrayVal.length(); i++) {
-            result.add((T)arrayVal.get(i));
-        }
-        return result;
-    }
-    
-    static String asJsonArray(Collection<? extends Object> collection) {
-        return (null == collection) ? "[]" : (new JSONArray(collection)).toString();
-    }
-    
-    static String asJsonObject(Map map) {
-        return (null == map) ? "{}" : (new JSONObject(map)).toString();
     }
 }
