@@ -23,7 +23,7 @@
 package com.sun.jersey.impl.provider.entity;
 
 import com.sun.jersey.impl.ImplMessages;
-import com.sun.jersey.impl.json.JSONJAXBContext;
+import com.sun.jersey.api.json.JSONJAXBContext;
 import com.sun.jersey.impl.json.JSONMarshaller;
 import com.sun.jersey.impl.json.JSONUnmarshaller;
 import com.sun.jersey.impl.json.reader.JsonXmlStreamReader;
