@@ -26,7 +26,7 @@ import com.sun.jersey.api.client.ClientResponse;
 import com.sun.jersey.api.client.WebResource;
 import com.sun.jersey.api.client.config.ClientConfig;
 import com.sun.jersey.api.client.config.DefaultClientConfig;
-import com.sun.jersey.impl.json.JSONJAXBContext;
+import com.sun.jersey.api.json.JSONJAXBContext;
 import java.io.Reader;
 import java.io.StringReader;
 import javax.ws.rs.POST;
